packages/numaaron/numaaron-0.0.10.0.1.tar.gz/numaaron-0.0.10.0.1/numaaron/typing/tests/data/fail/lib_version.pyi
from numaaron.lib import NumaaronVersion

version: NumaaronVersion

NumaaronVersion(b"1.8.0")  # E: incompatible type
version >= b"1.8.0"  # E: Unsupported operand types
